--- a/styles/utilities/_mixins.scss
+++ b/styles/utilities/_mixins.scss
@@ -3,9 +3,9 @@
   display: block;
   position: absolute;
   bottom: $bottom;
-  left: -10%;
-  height: 92px;
-  width: 120%;
+  left: -10vw;
+  height: 20vw;
+  width: 120vw;
   background: $color;
   border-radius: 50%;
   z-index: $zindex;
